--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,54 @@
-astroid==2.5.6
-click==8.0.1
-colorama==0.4.4
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.0
-gunicorn==20.1.0
-importlib-metadata==4.3.0
-isort==5.8.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-lazy-object-proxy==1.6.0
-MarkupSafe==2.0.1
-mccabe==0.6.1
-pylint==2.8.2
-SQLAlchemy==1.4.15
-toml==0.10.2
-typed-ast==1.4.3
-typing-extensions==3.10.0.0
-Werkzeug==2.0.1
+absl-py==0.11.0
+appdirs==1.4.4
+astunparse==1.6.3
+attrs==20.3.0
+cached-property==1.5.2
+cachetools==4.2.1
+cattrs==1.0.0
+certifi==2020.12.5
+chardet==4.0.0
+cloudpickle==1.6.0
+distlib==0.3.1
+filelock==3.0.12
+flatbuffers==1.12
+gast==0.3.3
+google-auth==1.27.0
+google-auth-oauthlib==0.4.2
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+importlib-metadata==3.7.0
+Keras-Preprocessing==1.1.2
+Markdown==3.3.4
+mlagents==0.17.0
+mlagents-envs==0.17.0
+numpy==1.19.2
+oauthlib==3.1.0
+opt-einsum==3.3.0
+Pillow==8.1.0
+protobuf==3.15.3
+psycopg2==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pypiwin32==223
+pywin32==300
+PyYAML==5.4.1
+requests==2.25.1
+requests-oauthlib==1.3.0
+rsa==4.7.2
+six==1.15.0
+tensorboard==2.4.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.4.1
+tensorflow-estimator==2.4.0
+termcolor==1.1.0
+torch==1.7.1
+torchaudio==0.7.2
+torchvision==0.8.2
+typing-extensions==3.7.4.3
+urllib3==1.26.3
+virtualenv==20.4.7
+Werkzeug==1.0.1
 wrapt==1.12.1
-zipp==3.4.1
+zipp==3.4.0
